--- a/public/assets/sass/style.css
+++ b/public/assets/sass/style.css
@@ -4550,10 +4550,29 @@ Responsive Menu Css
 * Page Banner CSS
 ==========================================================================*/
 .page__banner {
+  background-image: url('../img/entetesite.webp');
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  overflow: hidden;
+  padding: 150px 20px;
+}
+.page__banner::before {
+  background-color: var(--bg-heading-color);
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+   opacity: 0.9;
+  /*visibility: visible; */
+}
+/* .page__banner {
   background-color: var(--bg-heading-color);
   position: relative;
   overflow: hidden;
-}
+} */
 .page__banner-shape {
   position: absolute;
   right: 0;
