--- a/public/assets/sass/style.css
+++ b/public/assets/sass/style.css
@@ -10909,6 +10909,47 @@ Responsive Menu Css
     justify-content: center;
   }
 }
+
+
+.aa{
+  width: 100px; height: 100px;
+}
+
+@keyframes ping {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  75% {
+    transform: scale(1.75);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(2);
+    opacity: 0;
+  }
+}
+
+.ping-animation {
+  position: absolute;
+  width: 70px;
+  height: 70px;
+  top: 7px;
+  left: 7px;
+  z-index: -50;
+}
+
+.ping-animation span {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background-color: #198754; /* Bootstrap "bg-success" */
+  opacity: 0.75;
+  animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
+}
 /*==========================================================================
 * 404 CSS
 ==========================================================================*/
